# jamtrack-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  auto.py  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: swift.yml
benches/: boosttrack_benchmark.rs  bytetrack_benchmark.rs  ocsort_benchmark.rs
data/YOLOX_ncnn_palace/: output.json
data/onnx/: .gitignore
data/onnx_outputs/: .gitignore
data/video/: .gitignore  old_demos.md
examples/: example_boost_tracker.rs  example_bot_sort.rs  example_byte_tracker.rs  verify_tracker_count.rs
python/: README.md  baseetrack.py  kalman_filter.py  lapjv.py  main.py  pyproject.toml
python/boost_tracker/: boost_track.py  print_kalman_values.py  render_tracking_video.py  run_boosttrack_onnx.py
python/bot_sort/: basetrack.py  bot_sort.py  compare_botsort_outputs.py  kalman_filter.py  matching.py  run_botsort_onnx.py
python/byte_tracker/: byte_track.py  kalman_filter.py  matching.py  render_tracking_video.py  run_bytetrack_onnx.py
python/yolox/: extract_frames_for_onnx.py  run_yolox_onnx.py
scripts/: gen_charts.py
src/: byte_tracker.rs  error.rs  ffi.rs  kalman_filter.rs  lapjv.rs  lib.rs  main.rs  object.rs  rect.rs  strack.rs  test_byte_tracker.rs  test_kalman_filter.rs  test_lapjv.rs
src/boost_tracker/: assoc.rs  boost_tracker.rs  ecc.rs  kalman_filter.rs  mod.rs  strack.rs
src/bot_sort_tracker/: bot_sort.rs  kalman_filter.rs  mod.rs  strack.rs
src/byte_tracker/: byte_tracker.rs  kalman_filter.rs  mod.rs  strack.rs
src/oc_sort_tracker/: assoc.rs  kalman_filter.rs  mod.rs  oc_sort_tracker.rs  strack.rs
swift/: Makefile.toml
swift/JTrackers/: Package.swift
swift/JTrackers/Sources/JTrackers/: BoostTracker.swift  BotSort.swift  ByteTracker.swift  OCSort.swift  Object.swift
swift/JTrackers/Sources/JTrackers/JTrackers.docc/: JTrackers.md
swift/JTrackers/Tests/JTrackersTests/: BoostTrackerTests.swift  BotSortTests.swift  ByteTrackerTests.swift  OCSortTests.swift
swift/JamTrack.Framework/: Info.plist
swift/JamTrack.Framework/Headers/: JamTrack.h  jamtrack_api.h
swift/JamTrack.Framework/Modules/: module.modulemap
tests/: test_byte_track_with_yolox.rs
