[package]
name = "jamtrack-rs"
version = "0.2.2"
edition = "2021"
authors = ["kadu-v (Kazuki Ikemori)"]
description = "ByteTrack implementation in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bytetrack_benchmark"
harness = false

[dependencies]
thiserror = "1.0.66"
nalgebra = "0.33.2"
num = "0.4.3"


[dev-dependencies]
nearly_eq = "0.2.4"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
quickcheck = "1.0.3"
rand = "0.8.5"
criterion = "0.5.1"
