[package]
name = "jamtrack-rs"
version = "0.4.1"
edition = "2024"
authors = ["kadu-v (Kazuki Ikemori)"]
description = "ByteTrack implementation in Rust"
license = "MIT"
exclude = ["swift/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
ffi = []

[[bench]]
name = "bytetrack_benchmark"
harness = false

[[bench]]
name = "boosttrack_benchmark"
harness = false

[[bench]]
name = "ocsort_benchmark"
harness = false


[dependencies]
thiserror = "1.0.66"
nalgebra = "0.33.2"
num = "0.4.3"
image = { version = "0.25.2", default-features = false }


[dev-dependencies]
nearly_eq = "0.2.4"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
quickcheck = "1.0.3"
rand = "0.8.5"
criterion = "0.5.1"
indicatif = "0.17.8"
